# dune-spgrid

./: .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile.am  README  README.md  config.h.cmake  configure.ac  dune-spgrid.pc.in  dune.module  pyproject.toml  stamp-vc  todo
cmake/modules/: CMakeLists.txt  DuneSpgridMacros.cmake  Makefile.am
cmake/pkg/: Makefile.am
doc/: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile.am  footer.html.in  header.html  main.page
doc/doxygen/: Doxylocal  structure.page
doc/progs/: .gitignore  CMakeLists.txt  Makefile.am  iterators.cc
doc/progs/vtu/: .gitignore
dune/: Makefile.am
dune/common/: CMakeLists.txt  Makefile.am  iostream.hh
dune/grid/: CMakeLists.txt  Makefile.am  cartesiangrid.hh  spgrid.hh
dune/grid/cartesiangrid/: Makefile.am  adaptcallback.hh  backuprestore.hh  capabilities.hh  datahandle.hh  dgfparser.hh  entity.hh  entitypointer.hh  entityseed.hh  geometry.hh  grid.hh  hostgridaccess.hh  hostgridinfo.hh  idset.hh  indexsets.hh  intersection.hh  intersectioniterator.hh  iterator.hh  persistentcontainer.hh  twistutility.hh
dune/grid/cartesiangrid/hostgridinfo/: Makefile.am  alugrid.hh  generic.hh
dune/grid/common/: Makefile.am  superelementiterator.hh  superentityiterator.hh
dune/grid/extensions/: CMakeLists.txt  Makefile.am  superentityiterator.hh
dune/grid/freiburg/: Makefile.am  implcast.hh  persistentcontainerwrapper.hh
dune/grid/io/: Makefile.am
dune/grid/io/file/: Makefile.am
dune/grid/io/file/dgfparser/: Makefile.am  dgfspgridtype.hh
dune/grid/spgrid/: .gitignore  CMakeLists.txt  Makefile.am  backuprestore.hh  boundarysegmentiterator.hh  cachedpartitionlist.hh  capabilities.hh  communicate.hh  communication.hh  cube.hh  declaration.hh  decomposition.hh  dgfparser.hh  direction.hh  domain.hh  entity.hh  entityinfo.hh  entitypointer.hh  entityseed.hh  fileio.hh  geometricgridlevel.hh  geometry.hh  geometrycache.hh  geometryreference.hh  globalmesh.hh  grid.hh  gridlevel.hh  gridview.hh  hierarchiciterator.hh  hierarchicsearch.hh  hindexset.hh  hiterator.hh  idset.hh  indexset.hh  intersection.hh  intersectioniterator.hh  iterator.hh  linkage.hh  mesh.hh  messagebuffer.hh  (+15 more)
dune/grid/test/: .gitignore  1dcube.dgf  2dcube.dgf  2dtorus.dgf  3dcube.dgf  4dcube.dgf  5dcube.dgf  6dcube.dgf  CMakeLists.txt  Makefile.am  bndsegcheck.cc  bndsegcheck.sh  checkbndsegiterator.hh  checkidcommunication.hh  checkseiterator.hh  checktree.hh  decomposition.cc  seitcheck.cc  test-cartesiangrid.cc  test-cartesiangrid.sh  test-jacobians.cc  test-spgrid.cc  test-spgrid.sh
dune/grid/utility/: Makefile.am  spgridtype.hh  sphierarchicsearch.hh
m4/: CMakeLists.txt  Makefile.am  dune-spgrid.m4  resolved.m4
python/: CMakeLists.txt  setup.py.in
python/dune/: CMakeLists.txt
python/dune/spgrid/: CMakeLists.txt  __init__.py  _grids.py  _spgrid.cc  registergrid.cc  registergrid.hh
test/: 2dcube.dgf  2dtorus.dgf  3dcube.dgf  4dcube.dgf  Makefile.am  checkseiterator.hh  decomposition.cc  gridcheck.cc  gridcheck.sh  seitcheck.cc  seitcheck.sh
