cartesiangriddir = $(includedir)/dune/grid/cartesiangrid
cartesiangrid_HEADERS = adaptcallback.hh backuprestore.hh  capabilities.hh \
                        datahandle.hh  dgfparser.hh  entity.hh \
                        entitypointer.hh  entityseed.hh  geometry.hh  grid.hh \
                        hostgridaccess.hh  hostgridinfo.hh  idset.hh \
                        indexsets.hh  intersection.hh  intersectioniterator.hh \
                        iterator.hh  persistentcontainer.hh twistutility.hh

SUBDIRS = hostgridinfo

include $(top_srcdir)/am/global-rules
