install(FILES backuprestore.hh
              boundarysegmentiterator.hh
              cachedpartitionlist.hh
              capabilities.hh
              communication.hh
              cube.hh
              declaration.hh
              decomposition.hh
              domain.hh
              dgfparser.hh
              entity.hh
              entityinfo.hh
              entitypointer.hh
              entityseed.hh
              fileio.hh
              geometricgridlevel.hh
              geometry.hh
              geometrycache.hh
              grid.hh
              gridlevel.hh
              gridview.hh
              hierarchiciterator.hh
              hierarchicsearch.hh
              hindexset.hh
              idset.hh
              indexset.hh
              intersection.hh
              intersectioniterator.hh
              iterator.hh
              linkage.hh
              mesh.hh
              misc.hh
              multiindex.hh
              normal.hh
              partition.hh
              partitionlist.hh
              partitionpool.hh
              persistentcontainer.hh
              referencecube.hh
              refinement.hh
              superentityiterator.hh
              topology.hh
              version.hh
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/grid/spgrid)
