set( HEADERS
  backuprestore.hh
  boundarysegmentiterator.hh
  cachedpartitionlist.hh
  capabilities.hh
  communication.hh
  cube.hh
  declaration.hh
  decomposition.hh
  direction.hh
  domain.hh
  dgfparser.hh
  entity.hh
  entityinfo.hh
  entityseed.hh
  fileio.hh
  geometricgridlevel.hh
  geometry.hh
  geometrycache.hh
  grid.hh
  gridlevel.hh
  gridview.hh
  hierarchiciterator.hh
  hierarchicsearch.hh
  hindexset.hh
  idset.hh
  indexset.hh
  intersection.hh
  intersectioniterator.hh
  iterator.hh
  linkage.hh
  mesh.hh
  messagebuffer.hh
  misc.hh
  multiindex.hh
  normal.hh
  partition.hh
  partitionlist.hh
  partitionpool.hh
  persistentcontainer.hh
  referencecube.hh
  refinement.hh
  superentityiterator.hh
  topology.hh
  tree.hh
)

install(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/grid/spgrid)
