spgriddir = $(includedir)/dune/grid/spgrid
spgrid_HEADERS = capabilities.hh  communicate.hh  cube.hh  decomposition.hh \
                 domain.hh  dgfparser.hh  entity.hh  entityinfo.hh \
                 entitypointer.hh  fileio.hh  geometry.hh  geometrycache.hh \
                 grid.hh  gridlevel.hh  gridview.hh  hierarchiciterator.hh \
                 idset.hh  indexset.hh  intersection.hh  intersectioniterator.hh \
                 iterator.hh  misc.hh  multiindex.hh  partition.hh  \
                 partitionlist.hh  refinement.hh  superentityiterator.hh

include $(top_srcdir)/am/global-rules
