spgriddir = $(includedir)/dune/grid/spgrid
spgrid_HEADERS = cachedpartitionlist.hh  capabilities.hh  communication.hh \
                 cube.hh  decomposition.hh  domain.hh  dgfparser.hh \
                 entity.hh  entityinfo.hh  entitypointer.hh  fileio.hh \
                 geometry.hh  geometrycache.hh  grid.hh  gridlevel.hh \
                 gridview.hh  hierarchiciterator.hh  hierarchicsearch.hh \
                 hindexset.hh  idset.hh  indexset.hh  intersection.hh \
                 intersectioniterator.hh  iterator.hh  linkage.hh  mesh.hh \
                 misc.hh  multiindex.hh  normal.hh  partition.hh \
                 partitionlist.hh  partitionpool.hh  referencecube.hh \
                 refinement.hh  superentityiterator.hh  topology.hh  version.hh

include $(top_srcdir)/am/global-rules
